day4/dev/cimple-back-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-back-deployment
  labels:
    app: cimple-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-back
  template:
    metadata:
      name: cimple-back
      labels:
        app: cimple-back
    spec:
      volumes:
        - name: config-data
          emptyDir: {}

      containers:
        - name: cimple-back
          image: taksan/cimple-back:v1
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: config-data
              mountPath: /app/logs
        - name: cimple-eviewer-collector
          image: taksan/cimple-eviewer-collector:v1
          volumeMounts:
            - name: config-data
              mountPath: /opt/
---
apiVersion: v1
kind: Service
metadata:
  name: cimple-back
spec:
  type: LoadBalancer
  selector:
    app: cimple-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimple-back
spec:
  ingressClassName: nginx
  rules:
    - host: back.dev.cimple.bootcamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cimple-back
                port:
                  number: 80
