day4/dev/cimple-eviewer-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-eviewer-deployment
  namespace: dev
  labels:
    app: cimple-eviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-eviewer
  template:
    metadata:
      name: cimple-eviewer
      labels:
        app: cimple-eviewer
    spec:
      containers:
      - name: cimple-eviewer
        image: taksan/cimple-eviewer:v1
        ports:
        - containerPort: 5000
          name: http
        startupProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: cimple-eviewer
  namespace: dev
spec:
  selector:
    app: cimple-eviewer
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimple-eviewer
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: eviewer.dev.cimple.bootcamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cimple-eviewer
                port:
                  number: 80
